--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -25,19 +25,19 @@
       <tbody>
         <tr>
           <td>2015-2017</td>
-          <td>Teller at Postal Savings Bank of China Ningbo Branch</td>
+          <td>Teller at xx Bank of China Ningbo Branch</td>
         </tr>
         <tr>
           <td>2017-2018</td>
-          <td>Asset and Liability Management at Postal Savings Bank of China Ningbo Branch</td>
+          <td>Asset and Liability Management at xx Bank of China Ningbo Branch</td>
         </tr>
         <tr>
           <td>2019</td>
-          <td>Asset and Liability Management at Postal Savings Bank of China</td>
+          <td>Asset and Liability Management at xx Bank of China</td>
         </tr>
         <tr>
           <td>2020-</td>
-          <td>Statistical Analyst at Postal Savings Bank of China Ningbo Branch</td>
+          <td>Statistical Analyst at xx Bank of China Ningbo Branch</td>
         </tr>
       </tbody>
     </table>
